plugins {
	id "net.fabricmc.fabric-loom" version "${loom_version}"
	id "maven-publish"
	id "com.gradleup.shadow" version "${shadow_version}"
}

configurations {
    shadowImpl
    shadowModImpl
}

configurations.implementation.extendsFrom configurations.shadowImpl
configurations.implementation.extendsFrom configurations.shadowModImpl

version = "${project.mod_version}-mc${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {

	mavenCentral()

	// Modrinth

	maven { url = "https://api.modrinth.com/maven" }

	// DevAuth

	maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }

	// Hypixel Mod API
	
	maven { url = "https://repo.hypixel.net/repository/Hypixel/" }

	// Vigilance

	maven { url = "https://repo.essential.gg/repository/maven-public" }

	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft("com.mojang:minecraft:${project.minecraft_version}")
	implementation("net.fabricmc:fabric-loader:${project.loader_version}")
	implementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")

	// Fabric Language Kotlin

	implementation("net.fabricmc:fabric-language-kotlin:${project.fabric_language_kotlin_version}")
	
	// DevAuth
	
	runtimeOnly("org.apache.httpcomponents:httpclient:4.5.14")
	runtimeOnly("me.djtheredstoner:DevAuth-fabric:${project.devauth_version}")
	
	// HypixelModAPI

	implementation("net.hypixel:mod-api:${project.hypixel_mod_api_version}")
	include("maven.modrinth:hypixel-mod-api:1.0.2+build.1+mc26.1")

	// Vigilance

	shadowImpl("gg.essential:vigilance:${project.vigilance_version}")
	shadowModImpl("gg.essential:universalcraft-26.1-fabric:${project.universalcraft_version}") {
        exclude(group: "net.fabricmc")
		exclude(group: "org.jetbrains.kotlin")
    }

	// Json Schema Validator

	shadowImpl("com.networknt:json-schema-validator:${project.json_schema_validator_version}")
}

tasks.named('shadowJar') {
	archiveClassifier.set('')
    configurations = [project.configurations.shadowImpl, project.configurations.shadowModImpl]
    exclude("META-INF/versions/**")
	mergeServiceFiles()

	// Vigilance

	relocate("gg.essential.vigilance", "io.github.lilfroggy.deps.vigilance")
    relocate("gg.essential.elementa", "io.github.lilfroggy.deps.elementa")
    relocate("gg.essential.universal", "io.github.lilfroggy.deps.universal")

	// Networknt

	relocate("com.networknt", "io.github.lilfroggy.deps.networknt")
	relocate("com.ethlo", "io.github.lilfroggy.deps.ethlo")
	relocate("com.fasterxml.jackson", "io.github.lilfroggy.deps.jackson")
	relocate("org.slf4j", "io.github.lilfroggy.deps.slf4j")
	relocate("org.yaml", "io.github.lilfroggy.deps.yaml")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	enabled = false
	archiveClassifier.set('nodeps')
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

loom {
	runs {
        client {
            vmArgs "-Ddevauth.enabled=true"
        }
    }
}